hugo: Fix auto-font-size on iPhone / mobile Safari
Turn off webkit text-size-adjust so Safari on iPhone doesn't zoom text
that it thinks is too small.

Closes #483 as merged as of commit 9f476b872.
Fixes cue-lang/cue#3602.

--- a/hugo/assets/scss/base/base.scss
+++ b/hugo/assets/scss/base/base.scss
@@ -52,6 +52,7 @@ body {
 
     background-color: var(--body-background, $c-white);
     color: var(--text-color);
+    -webkit-text-size-adjust: 100%;
 }
 
 h1,
